--- a/carcollector/main_app/templates/cars/index.html
+++ b/carcollector/main_app/templates/cars/index.html
@@ -3,14 +3,14 @@
 
 <h1>Car List</h1>
 
-{% for cat in cats %}
+{% for car in cars %}
   <div class="card">
     <div class="card-content">
-      <span class="card-title">{{ cat.name }}</span>
-      <p>Breed: {{ cat.breed }}</p>
-      <p>Description: {{ cat.description }}</p>
-      {% if cat.age > 0 %}
-        <p>Age: {{ cat.age }}</p>
+      <span class="card-title">{{ car.name }}</span>
+      <p>Breed: {{ car.breed }}</p>
+      <p>Description: {{ car.description }}</p>
+      {% if car.age > 0 %}
+        <p>Age: {{ car.age }}</p>
       {% else %}
         <p>Age: Kitten</p>
       {% endif %}
