--- a/carcollector/main_app/templates/about.html
+++ b/carcollector/main_app/templates/about.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>About the car Collector</h1>
+<h1>About the Car Collector</h1>
 <hr />
-<p>Hire the car Collector!</p>
+<p>My cars and my dream cars!</p>
 
 {% endblock %}
