--- a/carcollector/main_app/templates/base.html
+++ b/carcollector/main_app/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>car Collector</title>
+  <title>My Car Collection</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 
@@ -16,12 +16,12 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;carCollector</a></li>
+          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;myCarCollector</a></li>
         </ul>
         <ul class="right">
             <li><a href="/about">About</a></li>
             <!-- new markup below -->
-            <li><a href="/cars">View All My cars</a></li>
+            <li><a href="/cars">View All My Cars</a></li>
         </ul>
       </div>
     </nav>
