--- a/carcollector/main_app/templates/cars/index.html
+++ b/carcollector/main_app/templates/cars/index.html
@@ -4,18 +4,19 @@
 <h1>Car List</h1>
 
 {% for car in cars %}
-  <div class="card">
-    <div class="card-content">
-      <span class="card-title">{{ car.name }}</span>
-      <p>Breed: {{ car.breed }}</p>
-      <p>Description: {{ car.description }}</p>
-      {% if car.age > 0 %}
-        <p>Age: {{ car.age }}</p>
-      {% else %}
-        <p>Age: Kitten</p>
-      {% endif %}
+  <a href="/cars/{{ car.id }}">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ car.list }}</span>
+        <p>Year: {{ car.year }}</p>
+        <p>Make: {{ car.make }}</p>
+        <p>Model: {{ car.model }}</p>
+        <p>Color: {{ car.color }}</p>
+        <!-- <p>Status: {{ car.status }}</p> -->
+        
+      </div>
     </div>
-  </div>
+  </a>
 {% endfor %}
 
 {% endblock %}
