--- a/carcollector/main_app/templates/cars/index.html
+++ b/carcollector/main_app/templates/cars/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Car List</h1>
+<h1>My Collection</h1>
 
 {% for car in cars %}
   <a href="/cars/{{ car.id }}">
@@ -12,7 +12,7 @@
         <p>Make: {{ car.make }}</p>
         <p>Model: {{ car.model }}</p>
         <p>Color: {{ car.color }}</p>
-        <!-- <p>Status: {{ car.status }}</p> -->
+        <p>Status: {{ car.status }}</p>
         
       </div>
     </div>
