--- a/carcollector/main_app/templates/cars/detail.html
+++ b/carcollector/main_app/templates/cars/detail.html
@@ -10,8 +10,8 @@
     <p>Make: {{ car.make }}</p>
     <p>Model: {{ car.model }}</p>
     <p>Color: {{ car.color }}</p>
-    <!-- <p>Status: {{ car.status }}</p> -->
-    
+    <p>Status: {{ car.status }}</p>
+
   </div>
 </div>
 
