--- a/carcollector/main_app/templates/base.html
+++ b/carcollector/main_app/templates/base.html
@@ -19,9 +19,10 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;myCarCollector</a></li>
         </ul>
         <ul class="right">
-            <li><a href="/about">About</a></li>
+            <li><a href="{% url 'about' %}">About</a></li>
             <!-- new markup below -->
-            <li><a href="/cars">View All My Cars</a></li>
+            <li><a href="{% url 'cars_create' %}">Add a Car</a></li>
+            <li><a href="{% url 'index' %}">View All My Cars</a></li>
         </ul>
       </div>
     </nav>
