--- a/carcollector/main_app/templates/cars/detail.html
+++ b/carcollector/main_app/templates/cars/detail.html
@@ -5,13 +5,17 @@
 
 <div class="card">
   <div class="card-content">
-    <span class="card-title">{{ car.list }}</span>
+    <span class="card-title">{{ car.make }} {{ car.model }}</span>
     <p>Year: {{ car.year }}</p>
     <p>Make: {{ car.make }}</p>
     <p>Model: {{ car.model }}</p>
     <p>Color: {{ car.color }}</p>
     <p>Status: {{ car.status }}</p>
 
+  </div>
+  <div class="card-action">
+    <a href="{% url 'cars_update' car.id %}">Edit</a>
+    <a href="{% url 'cars_delete' car.id %}">Delete</a>
   </div>
 </div>
 
