--- a/carcollector/main_app/templates/cars/index.html
+++ b/carcollector/main_app/templates/cars/index.html
@@ -7,7 +7,7 @@
   <a href="/cars/{{ car.id }}">
     <div class="card">
       <div class="card-content">
-        <span class="card-title">{{ car.list }}</span>
+        <span class="card-title">{{ car.make }} {{ car.model }}</span>
         <p>Year: {{ car.year }}</p>
         <p>Make: {{ car.make }}</p>
         <p>Model: {{ car.model }}</p>
