--- a/carcollector/main_app/templates/cars/detail.html
+++ b/carcollector/main_app/templates/cars/detail.html
@@ -3,20 +3,60 @@
 
 <h1>Car Details</h1>
 
-<div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ car.make }} {{ car.model }}</span>
-    <p>Year: {{ car.year }}</p>
-    <p>Make: {{ car.make }}</p>
-    <p>Model: {{ car.model }}</p>
-    <p>Color: {{ car.color }}</p>
-    <p>Status: {{ car.status }}</p>
+<div class="row">
+  <div class="col s6">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">{{ car.make }} {{ car.model }}</span>
+        <p>Year: {{ car.year }}</p>
+        <p>Make: {{ car.make }}</p>
+        <p>Model: {{ car.model }}</p>
+        <p>Color: {{ car.color }}</p>
+        <!-- <p>Status: {{ car.status }}</p> -->
 
+      </div>
+      <div class="card-action">
+        <a href="{% url 'cars_update' car.id %}">Edit</a>
+        <a href="{% url 'cars_delete' car.id %}">Delete</a>
+      </div>
+    </div>
   </div>
-  <div class="card-action">
-    <a href="{% url 'cars_update' car.id %}">Edit</a>
-    <a href="{% url 'cars_delete' car.id %}">Delete</a>
+  <div class="col s6">
+    <form action="{% url 'add_service' car.id %}" method="post">
+      {% csrf_token %}
+      {{ service_form.as_p }}
+      <input type="submit" class="btn" value="Add Service">
+    </form>
+    <table class="striped">
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Type</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for service in car.service_set.all %}
+        <tr>
+          <td>{{service.date}}</td>
+          <td>{{service.get_type_display}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 </div>
+
+<script>
+	const dateEl = document.getElementById('id_date');
+	M.Datepicker.init(dateEl, {
+		format: 'yyyy-mm-dd',
+		defaultDate: new Date(),
+		setDefaultDate: true,
+		autoClose: true
+	})
+
+	const selectEl = document.getElementById('id_meal');
+	M.FormSelect.init(selectEl)
+</script>
 
 {% endblock %}
