--- a/carcollector/main_app/templates/main_app/car_form.html
+++ b/carcollector/main_app/templates/main_app/car_form.html
@@ -8,13 +8,16 @@
     <h1>Add Car</h1>
   {% endif %}
   <!-- Leaving the action empty makes the form post to the same url used to display it -->
-  <form action="" method="post">
+  <form action="" method="POST">
     <!-- Django requires the following for security purposes -->
     {% csrf_token %}
     <table>
       <!-- Render the inputs inside of <tr>s & <td>s -->
       {{ form.as_table }}
+  
     </table>
-    <input type="submit" value="Submit!" class="btn">
+
+    <input type="submit" value="Submit!" class="btn" />
   </form>
+
 {% endblock %}
