--- a/carcollector/main_app/templates/about.html
+++ b/carcollector/main_app/templates/about.html
@@ -3,6 +3,6 @@
 
 <h1>About the Car Collector</h1>
 <hr />
-<p>My cars and my dream cars!</p>
+<h5>Welcome to my car collection!</h5>
 
 {% endblock %}
