--- a/carcollector/main_app/templates/cars/detail.html
+++ b/carcollector/main_app/templates/cars/detail.html
@@ -55,7 +55,7 @@
 		autoClose: true
 	})
 
-	const selectEl = document.getElementById('id_meal');
+	const selectEl = document.getElementById('id_type');
 	M.FormSelect.init(selectEl)
 </script>
 
