--- a/carcollector/main_app/templates/cars/detail.html
+++ b/carcollector/main_app/templates/cars/detail.html
@@ -12,7 +12,7 @@
         <p>Make: {{ car.make }}</p>
         <p>Model: {{ car.model }}</p>
         <p>Color: {{ car.color }}</p>
-        <!-- <p>Status: {{ car.status }}</p> -->
+
 
       </div>
       <div class="card-action">
@@ -45,6 +45,10 @@
     </table>
   </div>
 </div>
+
+
+  <!-- Available toys will come after this line -->
+
 
 <script>
 	const dateEl = document.getElementById('id_date');
