--- a/carcollector/main_app/templates/base.html
+++ b/carcollector/main_app/templates/base.html
@@ -20,7 +20,7 @@
           <li><a href="/" class="left brand-logo">&nbsp;&nbsp;myCarCollector</a></li>
         </ul>
         <ul class="right">
-
+            <li><a href="{% url 'about' %}">About</a></li>
             <!-- new markup below -->
             <li><a href="{% url 'passengers_create' %}">Add a Passenger</a></li>
             <li><a href="{% url 'passengers_index' %}">View All Passengers</a></li>
