--- a/carcollector/main_app/templates/cars/detail.html
+++ b/carcollector/main_app/templates/cars/detail.html
@@ -47,7 +47,47 @@
 </div>
 
 
+<hr>
+<div class="row">
+  <div class="col s6">
+    <h3>Passengers</h3>
+    {% if car.passengers.count %}
+      {% for passenger in car.passengers.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              A <span>{{ passenger.gender }}</span> {{ passenger.name }}
+            </span>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>No One Likes This Car :(</h5>
+    {% endif %}
+  </div>
   <!-- Available toys will come after this line -->
+  <div class="col s6">
+    <h3>Who Wants a Ride</h3>
+    {% if passengers.count %}
+      {% for passenger in passengers.all %}
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">
+              A <span>{{ passenger.gender }}</span> {{ passenger.name }}
+            </span>
+          </div>
+          <div class="card-action">
+            <form action="{% url 'assoc_passenger' car.id passenger.id %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn">Add</button>
+            </form>
+          </div>
+        </div>
+      {% endfor %}
+    {% else %}
+      <h5>That's All :(</h5>
+    {% endif %}
+  </div>
 
 
 <script>
