--- a/carcollector/main_app/templates/cars/detail.html
+++ b/carcollector/main_app/templates/cars/detail.html
@@ -56,7 +56,7 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">
-              A <span>{{ passenger.gender }}</span> {{ passenger.name }}
+              {{ passenger.name }}
             </span>
           </div>
         </div>
@@ -73,7 +73,7 @@
         <div class="card">
           <div class="card-content">
             <span class="card-title">
-              A <span>{{ passenger.gender }}</span> {{ passenger.name }}
+              {{ passenger.name }}
             </span>
           </div>
           <div class="card-action">
